[package]
name = "hrca"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
serde_json = "1.0.113"
regex = { version = "1.10.3", default-features = false, features = ["std"] }
regex-syntax = "0.8.2"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
