[package]
name = "hrca"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-tls = "0.2.11"
serde_json = "1.0.113"
serde = { version = "1.0.113", default-features = false, features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
